ucd career fair website

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page: contact
-pageTitle: CONTACT <strong>[US]</strong>
+pageTitle: CONTACT <strong>US</strong>
 ---
 
 <section id="contact">
@@ -9,7 +9,7 @@ pageTitle: CONTACT <strong>[US]</strong>
         <div class="row">
             <div class="col-md-6">
                 <h1>Leave us a message</h1>
-                <p>You can also email us at <a href="mailto:ucddesigncareerfair@gmail.com">ucddesigncareerfair@gmail.com</a></p>
+                <p>You can also email us at <a href="mailto:designcareersclub@gmail.com">designcareersclub@gmail.com</a></p>
                 <div class="contact-form">
                     <form action="https://docs.google.com/forms/d/1UjKf86jCevDa-EG7aksoEiMkmWd2FQvD27ch_n3jjFQ/formResponse" method="POST" id="ss-form" target="_self" onsubmit="">
                         <div class="form-group">
