--- a/employers/get-involved.html
+++ b/employers/get-involved.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page: employers
-pageTitle: GET <strong>[INVOLVED]</strong>
+pageTitle: GET <strong>INVOLVED</strong>
 ---
 
 <section id="contact">
