--- a/employers/index.html
+++ b/employers/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page: employers
-pageTitle: FOR <strong>[EMPLOYERS]</strong>
+pageTitle: FOR <strong>EMPLOYERS</strong>
 ---
 
 {% include coming-soon.html %}
