--- a/employers/prepare.html
+++ b/employers/prepare.html
@@ -1,16 +1,16 @@
 ---
 layout: default
 page: employers prepare
-pageTitle: <strong>[PREPARE]</strong> FOR THE FAIR
---- 
+pageTitle: <strong>PREPARE</strong> FOR THE FAIR
+---
 
 <img src="/img/PrepareBanner.jpg" class="bannerPic">
 <div class="body-content">
-    Congratulations! You've decided to attend the 2016 UC Davis Design Career Fair! We know you'll have a blast and meet many wonderful UCD Designers. To make the most of your visit, we've compiled some useful information below:
+    Congratulations! You've decided to attend the 2017 UC Davis Design Career Fair! We know you'll have a blast and meet many wonderful UCD Designers. To make the most of your visit, we've compiled some useful information below:
     <!-- ***First Section: Before -->
-    <h3><strong>[BEFORE]</strong> The Fair</h3>
+    <h3><strong>Before</strong> The Fair</h3>
     <div>
-        <h6>Register for the fair,</h6> If someone on our Outreach Team has not sent you the secret registration form, please <a href="mailto:ucddesigncareerfair@gmail.com,tparkeressig@ucdavis.edu?subject=Registration%20Form%20Needed">contact us</a> as soon as possible. We need your registration to ensure, among other things, that your table is the right size and your breakfast and lunch are prepared to your liking!
+        <h6>Register for the fair,</h6> If someone on our Outreach Team has not sent you the secret registration form, please <a href="mailto:designcareersclub@gmail.com,tparkeressig@ucdavis.edu?subject=Registration%20Form%20Needed">contact us</a> as soon as possible. We need your registration to ensure, among other things, that your table is the right size and your breakfast and lunch are prepared to your liking!
         <br>
         <h6>Decide what to bring,</h6> We suggest your team brings...
         <ul>
@@ -34,7 +34,7 @@ pageTitle: <strong>[PREPARE]</strong> FOR THE FAIR
     </div>
     <h6>And get excited!</h6> Seriously, we're looking forward to hosting you. We hope you're just as excited to meet our amazing students and colleagues!
     <!-- ***Second Section: Day Of -->
-    <h3><strong>[DAY OF]</strong> The Fair</h3>
+    <h3><strong>Day of</strong> The Fair</h3>
     <h6>Get to the fair,</h6> Driving on Interstate 80, (from West or East):
     <ul>
         <li>Look for signs for California 113 North towards Woodland.</li>
@@ -59,6 +59,6 @@ pageTitle: <strong>[PREPARE]</strong> FOR THE FAIR
     <h5>Looking forward to seeing you!</h5>
     <h4 class="CTA">Got a question?</h4>
     <h5>
-                        <input class="btn btn-cyan" type="submit" value="Email Us!" id="button2" onclick="window.location.href='mailto:ucddesigncareerfair@gmail.com'">
+                        <input class="btn btn-cyan" type="submit" value="Email Us!" id="button2" onclick="window.location.href='mailto:designcareersclub@gmail.com'">
                     </h5>
 </div>
