--- a/students/company-bios.html
+++ b/students/company-bios.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page: students company-bios
-pageTitle: COMPANY <strong>[BIOS]</strong>
+pageTitle: COMPANY <strong>BIOS</strong>
 ---
 
 <ul class="accordion">
