--- a/students/resources.html
+++ b/students/resources.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page: students
-pageTitle: STUDENT <strong>[RESOURCES]</strong>
+pageTitle: STUDENT <strong>RESOURCES</strong>
 ---
 
 {% include coming-soon.html %}
