--- a/students/rsvp.html
+++ b/students/rsvp.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page: students
-pageTitle: RSVP <strong>[FOR THE FAIR]</strong>
+pageTitle: RSVP <strong>FOR THE FAIR</strong>
 ---
 
 <section id="rsvp">
