--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ javascripts: <script src="/js/index.js" type="text/javascript"></script>
             <img class="brackets left" src="/img/lbracket.png">
             <div class="inner-content">
                 <h1>Design Career Fair at UC Davis</h1>
-                <h3 class="mission-statement">The 2nd Annual UC Davis Design Career Fair aims to empower students to take risks not only in designs, but also career aspirations. By providing students career resources we hope to bridge our talented designers to esteemed companies.</h3>
+                <h3 class="mission-statement">The UC Davis Design Career Fair aims to empower students to take risks not only in designs, but also career aspirations. By providing students career resources we hope to bridge our talented designers to esteemed companies.</h3>
                 <br>
                 <a class="btn btn-yellow" href="/about/fair">SEE DETAILS</a>
             </div>
@@ -25,8 +25,8 @@ javascripts: <script src="/js/index.js" type="text/javascript"></script>
                 <div class="bg"></div>
                 <div class="inner">
                     <!--<div class="carousel"><img src="img/icons.gif"></div>-->
-                    <h1>FOR <strong>[STUDENTS]</strong></h1>
-                    <p>What's your dream job? Internship? How will you get there? Ready your portfolio, polish off your interview outfit, and Insert Your Future Here!</p>
+                    <h1>FOR <strong>STUDENTS</strong></h1>
+                    <p>What's your dream job? Internship? How will you get there? Ready your portfolio, polish off your interview outfit, and come out to the playground!</p>
                     <ul class="links clearfix">
                         <li><a class="btn btn-inverted btn-small btn-white" href="/students/company-bios">COMPANY BIOS</a></li>
                         <li><a class="btn btn-inverted btn-small btn-white" href="/students/rsvp">RSVP</a></li>
@@ -40,7 +40,7 @@ javascripts: <script src="/js/index.js" type="text/javascript"></script>
                 <div class="bg"></div>
                 <div class="inner">
                     <!--<div class="carousel"><img src="img/icons.gif"></div>-->
-                    <h1>FOR <strong>[EMPLOYERS]</strong></h1>
+                    <h1>FOR <strong>EMPLOYERS</strong></h1>
                     <p>Who's your next team player? UC Davis Design students form a unique, cross-disciplinary skills group. Find the right fit at UCD!</p>
                     <ul class="links clearfix">
                         <li><a class="btn btn-inverted btn-small btn-white" href="/employers/benefits">BENEFITS</a></li>
@@ -54,7 +54,7 @@ javascripts: <script src="/js/index.js" type="text/javascript"></script>
 </section>
 <section class="contact">
     <div class="container">
-        <h3>Have any questions about the 2016 career fair?</h3>
+        <h3>Have any questions about the 2017career fair?</h3>
         <a class="btn btn-yellow" href="/contact">CONTACT US</a>
     </div>
 </section>
