--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 ---
 layout: plain
 page: register
-pageTitle: REGISTER WITH <strong>[US]</strong>
+pageTitle: REGISTER WITH <strong>US</strong>
 ---
 
 <section id="register">
@@ -10,7 +10,7 @@ pageTitle: REGISTER WITH <strong>[US]</strong>
             <div class="col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-0">
                 <div class="registration-form">
                     <h1>Employer Registration</h1>
-                    <p>The UC Davis Design Career Fair will be held on the UC Davis campus in the ARC Ballroom on April 22, 2016 from 10am-1pm.</p>
+                    <p>The UC Davis Design Career Fair will be held on the UC Davis campus in the ARC Ballroom on April 28, 2017 from 11am-3pm.</p>
                     <p>Please register below to confirm your spot.</p>
                     <p>(* indicate required fields)</p>
                     <form action="https://docs.google.com/forms/d/1-jIot0Yz-uMlyFENsSUc1PPMrz3DMwP1I2P4-rwPV0Q/formResponse" method="POST" id="ss-form" target="_self" onsubmit="">
@@ -47,22 +47,22 @@ pageTitle: REGISTER WITH <strong>[US]</strong>
                             <label>Arrival Time*</label>
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="entry.1676778651" value="8:30am" id="group_1676778651_1" role="radio" class="ss-q-radio" aria-label="8:30am" required="" aria-required="true">8:30am
+                                    <input type="radio" name="entry.1676778651" value="9:30am" id="group_1676778651_1" role="radio" class="ss-q-radio" aria-label="9:30am" required="" aria-required="true">9:30am
                                 </label>
                             </div>
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="entry.1676778651" value="9:00am" id="group_1676778651_2" role="radio" class="ss-q-radio" aria-label="9:00am" required="" aria-required="true">9:00am
+                                    <input type="radio" name="entry.1676778651" value="10:00am" id="group_1676778651_2" role="radio" class="ss-q-radio" aria-label="10:00am" required="" aria-required="true">10:00am
                                 </label>
                             </div>
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="entry.1676778651" value="9:30am" id="group_1676778651_3" role="radio" class="ss-q-radio" aria-label="9:30am" required="" aria-required="true">9:30am
+                                    <input type="radio" name="entry.1676778651" value="10:30am" id="group_1676778651_3" role="radio" class="ss-q-radio" aria-label="10:30am" required="" aria-required="true">10:30am
                                 </label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label>Lunch Request (pizza will be served), check all that apply</label>
+                            <label>Lunch Request (sandwiches will be served), check all that apply</label>
                             <div class="checkbox">
                                 <label>
                                     <input type="checkbox" name="entry.639305117" value="Vegetarian" id="group_639305117_1" role="checkbox" class="ss-q-checkbox" aria-required="true"> Vegetarian
@@ -103,10 +103,11 @@ pageTitle: REGISTER WITH <strong>[US]</strong>
                 <div class="schedule">
                     <h3>Schedule</h3>
                     <ul>
-                        <li class="clearfix">8:30am - 9:30am<span class="pull-right">Morning Mingle with Breakfast</span></li>
-                        <li class="clearfix">9:30am - 10:00am<span class="pull-right">Booth Set-Up</span></li>
-                        <li class="clearfix">10:00am - 1:00pm<span class="pull-right">Design Career Fair (lunch served at 11:30am)</span></li>
-                        <li class="clearfix">1:30pm<span class="pull-right">Clean Up Booths</span></li>
+                        <li class="clearfix">9:30am - 10:30am<span class="pull-right">Morning Mingle with Breakfast</span></li>
+                        <li class="clearfix">10:30am - 11:00am<span class="pull-right">Booth Set-Up</span></li>
+                        <li class="clearfix">11:00am - 3:00pm<span class="pull-right">Design Career Fair (lunch served at 1:00pm)</span></li>
+                        <li class="clearfix">3:00pm - 4:00pm<span class="pull-right">Clean Up Booths</span></li>
+                        <li class="clearfix">4:00pm - 5:00pm<span class="pull-right">Reception for companies and DCC volunteers</span></li>
                     </ul>
                 </div>
             </div>
