--- a/students/index.html
+++ b/students/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page: students
-pageTitle: FOR <strong>[STUDENTS]</strong>
+pageTitle: FOR <strong>STUDENTS</strong>
 ---
 
 {% include coming-soon.html %}
